--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.4.0",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.8",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
